src/test/deca/context/valid/provided/NoOp.deca
// DESCRIPTION : Pas d'opérations
{
    ;
    ;
    ;
}
