src/test/deca/context/invalid/provided/readInt.deca
// DESCRIPTION : readInt d'un boolean
{
    boolean a = readInt();
}
